--- a/Alpha Go General.ipynb
+++ b/Alpha Go General.ipynb
@@ -637,11 +637,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[1., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "tensor = torch.zeros(139,9,9)\n",
+    "tensor[0][0][0] = 1\n",
+    "print(tensor)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
